--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,8 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@css-inline/css-inline": "^0.17.0",
+    "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/class-transformer": "^0.4.0",
     "@nestjs/common": "^11.1.3",
@@ -39,6 +41,8 @@
     "class-validator": "^0.14.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "handlebars": "^4.7.8",
+    "nodemailer": "^7.0.5",
     "prisma": "^6.11.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
