--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,7 +36,7 @@
     "@radix-ui/react-tabs": "^1.1.4",
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
-    "@radix-ui/react-tooltip": "^1.2.7",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@supabase/supabase-js": "^2.49.4",
     "@tanstack/react-query": "^5.75.2",
     "@tiptap/extension-highlight": "^2.12.0",
@@ -59,6 +59,7 @@
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.7.3",
     "input-otp": "^1.4.2",
+    "leaflet": "^1.9.4",
     "lexical": "^0.32.1",
     "lucide-react": "^0.487.0",
     "motion": "^12.19.1",
@@ -66,8 +67,10 @@
     "next-themes": "^0.4.6",
     "radix-ui": "^1.4.3",
     "react": "^19.0.0",
+    "react-aria-components": "^1.12.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
+    "react-leaflet": "^5.0.0-rc.2",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animated": "^2.0.0",
@@ -79,6 +82,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/leaflet": "^1.9.20",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
