--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,39 +19,36 @@
     "@lexical/table": "^0.32.1",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.2",
-    "@radix-ui/react-dialog": "^1.1.14",
-    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-menubar": "^1.1.15",
     "@radix-ui/react-navigation-menu": "^1.2.6",
-    "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-radio-group": "^1.3.7",
     "@radix-ui/react-scroll-area": "^1.2.4",
     "@radix-ui/react-select": "^2.2.5",
-    "@radix-ui/react-separator": "^1.1.3",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-switch": "^1.2.5",
+    "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.4",
-    "@radix-ui/react-toggle": "^1.1.9",
-    "@radix-ui/react-toggle-group": "^1.1.10",
+    "@radix-ui/react-toggle": "^1.1.10",
+    "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@supabase/supabase-js": "^2.49.4",
     "@tanstack/react-query": "^5.75.2",
-    "@tiptap/extension-highlight": "^2.12.0",
-    "@tiptap/extension-image": "^2.12.0",
-    "@tiptap/extension-link": "^2.12.0",
-    "@tiptap/extension-subscript": "^2.12.0",
-    "@tiptap/extension-superscript": "^2.12.0",
-    "@tiptap/extension-task-item": "^2.12.0",
-    "@tiptap/extension-task-list": "^2.12.0",
-    "@tiptap/extension-text-align": "^2.12.0",
-    "@tiptap/extension-typography": "^2.12.0",
-    "@tiptap/extension-underline": "^2.12.0",
-    "@tiptap/pm": "^2.12.0",
-    "@tiptap/react": "^2.12.0",
-    "@tiptap/starter-kit": "^2.12.0",
+    "@tiptap/extension-code-block-lowlight": "^3.3.0",
+    "@tiptap/extension-color": "^3.3.0",
+    "@tiptap/extension-horizontal-rule": "^3.3.0",
+    "@tiptap/extension-image": "^3.3.0",
+    "@tiptap/extension-text-style": "^3.3.0",
+    "@tiptap/extension-typography": "^3.3.0",
+    "@tiptap/extensions": "^3.3.0",
+    "@tiptap/pm": "^3.3.0",
+    "@tiptap/react": "^3.3.0",
+    "@tiptap/starter-kit": "^3.3.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -61,6 +58,7 @@
     "input-otp": "^1.4.2",
     "leaflet": "^1.9.4",
     "lexical": "^0.32.1",
+    "lowlight": "^3.3.0",
     "lucide-react": "^0.487.0",
     "motion": "^12.19.1",
     "next": "15.3.0",
@@ -71,7 +69,8 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "react-leaflet": "^5.0.0-rc.2",
-    "sonner": "^2.0.5",
+    "react-medium-image-zoom": "^5.3.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animated": "^2.0.0",
     "tw-animate-css": "^1.2.5",
@@ -82,6 +81,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/leaflet": "^1.9.20",
     "@types/node": "^20",
     "@types/react": "^19",
@@ -90,6 +90,7 @@
     "eslint-config-next": "15.3.0",
     "sass": "^1.89.0",
     "tailwindcss": "^4",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5"
   }
 }
