--- a/backend/package.json
+++ b/backend/package.json
@@ -35,6 +35,7 @@
     "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/platform-express": "^11.0.1",
     "@prisma/client": "^6.11.0",
+    "@supabase/supabase-js": "^2.57.0",
     "bcryptjs": "^3.0.2",
     "cache-manager": "^7.0.1",
     "class-transformer": "^0.5.1",
