--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@supabase/supabase-js": "^2.49.4",
     "@tanstack/react-query": "^5.75.2",
+    "@tanstack/react-table": "^8.21.3",
     "@tiptap/extension-code-block-lowlight": "^3.3.0",
     "@tiptap/extension-color": "^3.3.0",
     "@tiptap/extension-horizontal-rule": "^3.3.0",
@@ -70,11 +71,14 @@
     "react-hook-form": "^7.55.0",
     "react-leaflet": "^5.0.0-rc.2",
     "react-medium-image-zoom": "^5.3.0",
+    "recharts": "^2.15.4",
+    "sharp": "^0.34.3",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animated": "^2.0.0",
     "tw-animate-css": "^1.2.5",
     "uuid": "^11.1.0",
+    "vaul": "^1.1.2",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
   },
