--- a/backend/package.json
+++ b/backend/package.json
@@ -47,6 +47,7 @@
     "prisma": "^6.11.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "sharp": "^0.34.3",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
