--- a/compose.yaml
+++ b/compose.yaml
@@ -1,10 +1,42 @@
 services:
+
+  rabbitmq:
+    image: rabbitmq:3-management
+    container_name: leafe-rabbitmq
+    ports:
+      - "5672:5672"   
+      - "15672:15672"    
+    environment:
+      RABBITMQ_DEFAULT_USER: user
+      RABBITMQ_DEFAULT_PASS: password
+    networks:
+      - backend-network
+  rabbitmq_service:
+   container_name: rabbitmq-service
+   build:
+    context: ./rabbitmq  
+    dockerfile: Dockerfile         
+   ports:
+    - "5001:5000"        
+   env_file: .env  
+   environment:
+    NODE_ENV: development
+    RABBITMQ_USER: user
+    RABBITMQ_PASS: password
+   volumes:
+    - ./rabbitmq:/usr/src/app
+   networks:
+    - backend-network
+   depends_on:
+    - rabbitmq
+ 
   server_dev:
     container_name: nest-server
     user: 'root'
     build:
-      context: .
+      context: ./backend
       dockerfile: Dockerfile
+    env_file: .env  
     environment:
       - NODE_ENV=development
     ports:
